# sir_animal

./: Cargo.toml  README.md  simple.json
src/: ld.rs  main.rs  misc.rs  simple_sample.rs  sir_nodes.rs
src/ld/: compressed_tree_printing.rs  examine.rs  exec.rs  info_graph.rs  ld_model.rs  mutation_scan.rs  param.rs  print_dot.rs  sir_writer.rs
src/ld/examine/: humans.rs
src/simple_sample/: execute.rs  model.rs  param.rs
