[package]
name = "sir_animal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
net_ensembles = { path = "../net_ensembles" }
rand_pcg = { version = "0.3.1", features = ["serde1"]}
indicatif = {version = "0.17", features = ["improved_unicode", "rayon"]}
serde_json = "1.0"
rand_distr = "0.4.3"
humantime = "^2.1"
structopt = "^0.3.21"
rayon = "^1.5.3"