[package]
name = "sir_animal"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
net_ensembles = { path = "../net_ensembles" }#70e2a85ceff0ac27ad67caf1da5037a9ea94f88f
rand_pcg = { version = "0.3.1", features = ["serde1"]}
indicatif = {version = "0.17", features = ["improved_unicode", "rayon"]}
serde_json = { version = "1.0", features = ["preserve_order"]}
rand_distr = "0.4.3"
humantime = "^2.1"
structopt = "^0.3.21"
rayon = "^1.5.3"
bincode = "^1.3.3"
bincode_helper = { git = "https://github.com/Pardoxa/bincode_helper.git", rev = "f795aaf7899e8d9aea18fc0e2ffbd29f91ef61f4" }
glob = "^0.3.1"
regex = "1.7.1"
kahan = "0.1.4"
rug = "1.19.0"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true
